==> hathach/tinyusb/src/portable/telink/dcd_tlsr.c <==
#include "tusb_option.h"
#include "device/dcd.h"
#include "driver.h"
#define EP_MAX 9
#define XFER_CTL_BASE(_ep, _dir) &xfer_status[_ep][_dir]

void dcd_init(uint8_t rhport)
{
    (void)rhport;

    /* enable global interrupt. */
#if (MCU_CORE_B91 || MCU_CORE_B92)
    core_interrupt_enable();
#elif (MCU_CORE_B80 || MCU_CORE_B85 || MCU_CORE_B87)
    irq_enable();
#endif

    usbhw_enable_manual_interrupt(FLD_CTRL_EP_AUTO_STD | FLD_CTRL_EP_AUTO_DESC | FLD_CTRL_EP_AUTO_CFG);

    usbhw_set_irq_mask(USB_IRQ_RESET_MASK | USB_IRQ_SUSPEND_MASK);

    usb_set_pin_en();
}

void dcd_int_enable(uint8_t rhport)
{
    (void)rhport;

#if (MCU_CORE_B91 || MCU_CORE_B92)
    plic_interrupt_enable(IRQ_USB_CTRL_EP_SETUP);
    plic_interrupt_enable(IRQ_USB_CTRL_EP_DATA);
    plic_interrupt_enable(IRQ_USB_CTRL_EP_STATUS);
    plic_interrupt_enable(IRQ_USB_CTRL_EP_SETINF);
    plic_interrupt_enable(IRQ_USB_RESET);
    plic_interrupt_enable(IRQ_USB_ENDPOINT);
#elif (MCU_CORE_B80 || MCU_CORE_B85 || MCU_CORE_B87)
    // TODO
#endif
}

void dcd_int_disable(uint8_t rhport)
{
    (void)rhport;

#if (MCU_CORE_B91 || MCU_CORE_B92)
    plic_interrupt_disable(IRQ_USB_CTRL_EP_SETUP);
    plic_interrupt_disable(IRQ_USB_CTRL_EP_DATA);
    plic_interrupt_disable(IRQ_USB_CTRL_EP_STATUS);
    plic_interrupt_disable(IRQ_USB_CTRL_EP_SETINF);
    plic_interrupt_disable(IRQ_USB_RESET);
    plic_interrupt_disable(IRQ_USB_ENDPOINT);
#elif (MCU_CORE_B80 || MCU_CORE_B85 || MCU_CORE_B87)
    // TODO
#endif
}

bool dcd_edpt_open(uint8_t rhport, tusb_desc_endpoint_t const *desc_edpt)
{
    (void)rhport;
    (void)desc_edpt;

    uint8_t const epnum = tu_edpt_number(desc_edpt->bEndpointAddress);

    reg_usb_edp_en |= BIT(epnum & 0x07); // endpoint 8 means endpoint 0.

    return true;
}

bool dcd_edpt_xfer(uint8_t rhport, uint8_t ep_addr, uint8_t *buffer, uint16_t total_bytes)
{
    (void)rhport;
    (void)ep_addr;
    (void)buffer;
    (void)total_bytes;

    unsigned char const epnum = tu_edpt_number(ep_addr);
    unsigned char const dir = tu_edpt_dir(ep_addr);
    xfer_ctl_t *xfer = XFER_CTL_BASE(epnum, dir);
    xfer->buffer = buffer;
    xfer->total_len = total_bytes;
    xfer->queued_len = 0;
    xfer->short_packet = false;

    return true;
}

void dcd_edpt_stall(uint8_t rhport, uint8_t ep_addr)
{
    (void)rhport;
    (void)ep_addr;

    unsigned char const epnum = tu_edpt_number(ep_addr);
    unsigned char const dir = tu_edpt_dir(ep_addr);
    xfer_ctl_t *xfer = XFER_CTL_BASE(epnum, dir);
    xfer->stall_flag = 1;
    if (0 == epnum)
    {
        usbhw_write_ctrl_ep_ctrl(FLD_EP_DAT_STALL);
    }
    else
    {
        usbhw_data_ep_stall(epnum);
    }
}

void dcd_edpt_clear_stall(uint8_t rhport, uint8_t ep_addr)
{
    (void)rhport;
    (void)ep_addr;

    unsigned char const epnum = tu_edpt_number(ep_addr);
    unsigned char const dir = tu_edpt_dir(ep_addr);
    xfer_ctl_t *xfer = XFER_CTL_BASE(epnum, dir);
    xfer->stall_flag = 0;

    if (0 == epnum)
    {
        usbhw_write_ctrl_ep_ctrl(FLD_EP_DAT_ACK);
    }
    else
    {
        usbhw_data_ep_ack(epnum);
    }
}

static void bus_reset(void)
{
    xfer_status[0][TUSB_DIR_OUT].max_size = CFG_TUD_ENDPOINT0_SIZE;
    xfer_status[0][TUSB_DIR_IN].max_size = CFG_TUD_ENDPOINT0_SIZE;
}
